--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,3 +25,8 @@ jobs:
         run: yarn test
       - name: Build
         run: yarn build
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
