--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@airthium/react-pdf-svg",
-  "version": "0.2.1",
+  "version": "0.9.0",
   "license": "MIT",
   "homepage": "https://github.com/Airthium/react-pdf-svg",
   "repository": {
@@ -34,6 +34,7 @@
     "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@react-pdf/renderer": "3.0.0",
+    "@testing-library/react": "13.4.0",
     "@types/jest": "29.0.3",
     "@types/node": "18.7.18",
     "@types/react": "18.0.21",
