--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true
   },
+  "include": ["src/**/*"],
   "exclude": ["src/**/*.test.tsx"]
 }
