--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "*.d.ts"],
   "exclude": ["src/**/*.test.tsx"]
 }
