--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,6 @@
 {
   "extends": ["config:base"],
+  "timezone": "Eruope/Paris",
   "schedule": ["before 9am on Monday"],
   "baseBranches": ["hotfix"],
   "groupName": "all dependencies",
